--- a/ADOT4J4A/AndroidManifest.xml
+++ b/ADOT4J4A/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:name=".ADOT4J4A"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -24,7 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity$DetailsActivity" />
+        <activity android:name=".DetailsActivity" />
+        <activity android:name=".Login$LoginList" />
     </application>
 
 </manifest>
