--- a/ADOT4J4A/AndroidManifest.xml
+++ b/ADOT4J4A/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:name=".ADOT4J4A"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar" >
+        android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -26,7 +25,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailsActivity" />
-        <activity android:name=".Login$LoginList" />
     </application>
 
 </manifest>
