--- a/ADOT4J4A/AndroidManifest.xml
+++ b/ADOT4J4A/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateVisible|adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
